docs: again, try to fix touch events on iOS in iframe

--- a/packages/examples/src/styles.scss
+++ b/packages/examples/src/styles.scss
@@ -1,3 +1,9 @@
+
+// https://stackoverflow.com/questions/41869122/touch-events-within-iframe-are-not-working-on-ios:W
+html, body {
+    touch-action: auto;
+}
+
 // don't put anything else in here,
 // it's not imported by the typedoc output
 body {
